apps/traefik-ingress/traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  externalIPs:
  - 94.112.245.206
  externalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
